# cpp_template_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc
.github/workflows/: ci.yml
include/: process.h
include/utils/: logger.h
src/: process.cc
src/utils/: logger.cc
